--- a/DockerFile
+++ b/DockerFile
@@ -1,1 +1,6 @@
 FROM jupyter/tensorflow-notebook:latest
+
+RUN pip install click
+RUN pip install pandas-profiling
+RUN pip install pytest
+RUN pip install zipfile
